--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ Inventory Manager/.vs/Inventory Manager/v15/.suo
 *.tlog
 *.log
 *.idb
+Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.db
+Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.opendb
+Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.db
