--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Inventory Manager/.vs/Inventory Manager/v15/.suo
 Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.db
 Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.opendb
 Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.db
+Inventory Manager/.vs/Inventory Manager/v15/.suo
+Inventory Manager/.vs/Inventory Manager/v15/Browse.VC.db
